Added Nixel static topbar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+	
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	  <div class="container-fluid">
+	    <h3>IMPORTANT NOTE FOR RESIDENTS NEAR WILDFIRES</h3>
+	    <h3>Text your zipcode to <a href="tel:888777">888777</a> to receive important updates<h3>
+	  </div>
+	</nav>
 
   <div class="section bg-light text-center">
     <div class="container">
@@ -43,7 +50,7 @@
     <div class="container">
       <h2 class="text-center mb-3">Updates</h2>
       <p class="text-center mb-5">
-        <small class="text-muted">Last updated of 10/9 8pm</small>
+        <small class="text-muted">Last updated of 10/10 8am</small>
       </p>
       <div class="row">
         <div class="col-sm-10 mx-auto">
@@ -80,7 +87,7 @@
             </li>
             <li class="list-group-item">
               <i class="fa fa-warning mr-3"></i>
-              Oliver’s in Rohnert Park is currently open and offering free coffee and tea.
+              Residents of affected areas are asked
             </li>
           </ul>
         </div>
